--- a/main/css/academico.css
+++ b/main/css/academico.css
@@ -1,11 +1,16 @@
-/* Estilo da Aba Acadêmico */
 
 .academico {
     padding: 20px;
-    background: #fff;
+    background-color: rgb(255, 255, 255);
     margin-bottom: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    color: black;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;   
+}
+
+.academico h2{
+    color: black;
 }
 
 .academico h3 {
@@ -75,7 +80,6 @@ th {
     background-color: #218838;
 }
 
-/* Calendário Placeholder */
 #calendario {
     height: 200px;
     background-color: #e9ecef;
