--- a/main/css/arte.css
+++ b/main/css/arte.css
@@ -7,6 +7,12 @@
     margin-bottom: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    color: black;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.arte h2{
+    color: black;
 }
 
 .editar-canva, .gerenciar-noticias, .configurar-tvs {
