--- a/main/css/configuracoes.css
+++ b/main/css/configuracoes.css
@@ -1,12 +1,21 @@
-/* configuracoes.css */
-
-/* Estilo da Aba Configurações */
 .configuracoes {
     padding: 20px;
     background: #fff;
     margin-bottom: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: black;
+}
+
+h2{
+    color: black;
+}
+
+.top h2 {
+    color: black;
+    font-size: 20px;
+    background-color: #0056b3;
 }
 
 .configuracoes h3 {
